# Challenge-API

./: README.md  company.sql  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 324b431fdeb4_small_changes.py  3ded26d5450c_check_changes.py  c5930bc73865_initial_migration.py
src/: initialize_db.py  main.py
src/api/: all.txt  bank_accounts.py  expenses.py  payments.py  roles.py  urls.py  users.py  users_roles.py
src/core/: config.py  database.py
src/models/public/: __init__.py  all.txt  bank_accounts.py  expenses.py  expenses_items.py  payments.py  providers.py  roles.py  users.py  users_roles.py
src/schemas/: all.txt  bank_accounts.py  expenses.py  expenses_items.py  payments.py  providers.py  roles.py  users.py  users_roles.py
